--- a/index.html
+++ b/index.html
@@ -9,6 +9,32 @@
 
 </head>
 <body>
+
+
+    <div class="container" ng-app="myApp">
+        <div class="row">
+          <div class="col-lg-12">
+      <div ng-controller="ModalDemoCtrl">
+          <script type="text/ng-template" id="myModalContent.html">
+              <div class="modal-header">
+                  <h3 class="modal-title">I'm a modal!</h3>
+              </div>
+              <div class="modal-body">
+                  <p>here we are!!!</p>
+              </div>
+              <div class="modal-footer">
+                  <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
+                  <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
+              </div>
+          </script>
+      
+          <button type="button" class="btn btn-default" ng-click="open()">Click</button>
+        
+      </div>
+          </div>
+        </div>
+      </div>
+
 <div class="container" ng-app="formvalid">
   <div class="panel" data-ng-controller="validationCtrl">
   <div ng-If="data.length > 0">
@@ -51,6 +77,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.12/js/jquery.dataTables.min.js'></script>
 <script src='https://cdn.datatables.net/1.10.12/js/dataTables.bootstrap.min.js'></script>
 <script  src="./script.js"></script>
+<script  src="./modal.js"></script>
 
 </body>
 </html>
