--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>datatable </title>
+  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
 <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
 <link rel='stylesheet' href='https://cdn.datatables.net/1.10.12/css/dataTables.bootstrap.min.css'><link rel="stylesheet" href="./style.css">
 <script></script>
@@ -14,40 +15,33 @@
 
 <div class="container" ng-app="formvalid">
 
- 
-<div class="row">
-    <div class="col-lg-12">
-<div ng-controller="ModalDemoCtrl">
+    <div class="panel" data-ng-controller="validationCtrl">
+        <div ng-If="data.length > 0">
     <script type="text/ng-template" id="myModalContent.html">
         <div class="modal-header">
             <h3 class="modal-title">I'm a modal!</h3>
         </div>
         <div class="modal-body">
+          <div ng-repeat="i in myData">
             <div class="custom-control custom-switch">
-                <input type="checkbox" class="custom-control-input" id="customSwitch1">
-                <label class="custom-control-label" for="customSwitch1">Toggle this switch element</label>
+                <input type="checkbox" class="custom-control-input" id="customSwitch1" ng-checked="{{i}}">
+                <label class="custom-control-label" for="customSwitch1">{{i}} - {{columns[$index]}}</label>
             </div>
+          </div>
+            
         </div>
         <div class="modal-footer">
             <button class="btn btn-primary" type="button" ng-click="ok()">OK</button>
             <button class="btn btn-warning" type="button" ng-click="cancel()">Cancel</button>
         </div>
-    </script>
-
-    <button type="button" class="btn btn-default" ng-click="open()">Click</button>
-  
-</div>
-    </div>
-  </div> 
-
-  <div class="panel" data-ng-controller="validationCtrl">
-  <div ng-If="data.length > 0">
+    </script>  
+  <div class="card">
+    <div class="card-body">
   <div class="panel-heading border">    
-    <h2>Data table
-    </h2>
+    <div class="card-title">Data table</div>
   </div>
   <div class="panel-body">
-      <table id="example" class="table table-bordered bordered table-striped table-condensed datatable" ui-jq="dataTable" ui-options="dataTableOpt">
+      <table id="example" class="table table-striped datatable" ui-jq="dataTable" ui-options="dataTableOpt">
       <thead>
         <tr>
           <th>#</th>
@@ -59,7 +53,7 @@
         </tr>
       </thead>
         <tbody>
-          <tr ng-repeat="n in data">
+          <tr ng-repeat="n in data" ng-click="open(n)">
             <td>{{$index+1}}</td>
             <td>{{n[0]}}</td>
             <td>{{n[1]}}</td>
@@ -72,8 +66,8 @@
   </div>
   </div>
 </div>
- 
-
+</div>
+</div>
 </div>
 <!-- partial -->
   <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
